auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4173
  selector:
    app: utsav-auth
