auth-test-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5173
  selector:
    app: utsav-auth
