backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - backend.bmsutsav.in
    secretName: backend-kubernetes-tls
  rules:
  - host: "backend.bmsutsav.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 80
