utsav-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utsav-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - backend.bmsutsav.in
    - auth.bmsutsav.in
    - sponsorship.bmsutsav.in
    - bmsutsav.in
    - coordinators.bmsutsav.in
    - campaigners.bmsutsav.in
    - registrations.bmsutsav.in
    - merch.bmsutsav.in
    secretName: backend-kubernetes-tls
  rules:
  - host: "backend.bmsutsav.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: "auth.bmsutsav.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: authportal-service
            port:
              number: 80
  - host: "sponsorship.bmsutsav.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sponsor-service
            port:
              number: 80
  - host: "bmsutsav.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: landing-service
            port:
              number: 80
  - host: "coordinators.bmsutsav.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: coord-service
            port:
              number: 80
  - host: "campaigners.bmsutsav.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: camp-service
            port:
              number: 80
  - host: "registrations.bmsutsav.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: register-service
            port:
              number: 80
  - host: "merch.bmsutsav.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: merch-service
            port:
              number: 80
